<resources>
    <string name="app_name">map</string>
    <string name="location_source">Location Source</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_location">Add Location</string>
    <string name="sort_location">Sort Locations</string>
    <string name="save_location">Save Location</string>
    <string name="search_location">Search Location</string>
    <string name="sort_by">Sort By</string>
    <string name="ascending_order">Sort distance in ascending order</string>
    <string name="apply">Apply</string>
    <string name="descending_order">Sort distance in descending order</string>
</resources>