<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.app.map.ui.searchPlacesActivity.SearchLocationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchPlacesActivity.SearchLocationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/location_source"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/search_location"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/searchLocation"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_location"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:id="@+id/saveLocation"/>

        <fragment
            android:id="@+id/search_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</RelativeLayout>


</layout>