<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.app.map.ui.locationListActivity.LocationViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_app_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/location_source"
        android:textSize="@dimen/_13sdp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/app_color_700"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/arrow_black"
        tools:ignore="ContentDescription,RelativeOverlap" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:backgroundTint="@color/app_color"
        android:id="@+id/location_icon"
        android:background="@drawable/location_icon"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview_loc"
        android:overScrollMode="never"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:clipToPadding="false"
        android:layout_above="@+id/bottomTabs"
        android:layout_gravity="center_vertical"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/location_list"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNoData"
        android:layout_centerInParent="true"
        android:text="@string/no_data_found"
        android:textColor="@color/app_color_700"
        android:textSize="@dimen/_15sdp"
        tools:ignore="RelativeOverlap" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/_6sdp"
       android:layout_marginTop="@dimen/_6sdp"
       android:gravity="center"
       android:layout_alignParentBottom="true"
       android:id="@+id/bottomTabs">
       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="@dimen/_10sdp"
           android:text="@string/add_location"
           android:id="@+id/addLocation"/>
       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/_10sdp"
           android:text="@string/sort_location"
           android:id="@+id/sortLocation"/>
   </LinearLayout>
</RelativeLayout>

</layout>